# lunaticvibes

./: .gitignore  .gitmodules  BmsParser.cpp  BmsParser.h  CMakeLists.txt  CMakeLists.txt.bak  CMakeSettings.json  CMakeSettings.json.bak  LICENSE  LICENSE_3RD_PARTY  README.md  banshao.sln  banshao.vcxproj  banshao.vcxproj.filters  build-dependencies.bat  unittest.vcxproj  unittest.vcxproj.filters
ext/: CMakeLists.txt
ext/SDL2/: CMakeLists.txt  SDL2Config.cmake
ext/SDL2_gfx/: CMakeLists.txt  sdl2_gfx.vcxproj  sdl2_gfx.vcxproj.filters
ext/SDL2_gfx/include/: SDL2_gfxPrimitives_font.h  SDL2_imageFilter.h
ext/SDL2_image/: CMakeLists.txt
ext/SDL2_ttf/: CMakeLists.txt
ext/fmod/: CMakeLists.txt
ext/fmod/lib/: fmodL_vc.lib  fmod_vc.lib
ext/libav/: CMakeLists.txt  README.md  build.md  build.txt
ext/libav/libavfilter/: af_aformat.d  af_anull.d  af_asyncts.d  af_resample.d  allfilters.d  audio.d  avfilter-6.def  avfilter-6.orig.def  avfilter.d  avfilter.lib  avfiltergraph.d  buffersink.d  buffersrc.d  drawutils.d  fifo.d  formats.d  graphparser.d  libavfilter-uninstalled.pc  libavfilter.pc  pthread.d  trim.d  vf_format.d  vf_fps.d  vf_null.d  vf_scale.d  video.d
ext/libav/libavformat/: allformats.d  avformat-57.def  avformat-57.orig.def  avformat.lib  avidec.d  avio.d  aviobuf.d  cutils.d  diracdec.d  dump.d  file.d  flac_picture.d  flvdec.d  format.d  h263dec.d  h264dec.d  hevcdec.d  id3v1.d  id3v2.d  isom.d  libavformat-uninstalled.pc  libavformat.pc  libavformat.ver  m4vdec.d  matroska.d  matroskadec.d  metadata.d  mov.d  mov_chan.d  mpegvideodec.d  mux.d  mvdec.d  network.d  oggparsevorbis.d  options.d  os_support.d  protocols.d  rawdec.d  replaygain.d  riff.d  (+9 more)
ext/sdl2_gfx/src/: SDL2_gfxPrimitives.c  SDL2_imageFilter.c
ext/sqlite3/: CMakeLists.txt
src/common/: CMakeLists.txt  asynclooper.cpp  asynclooper.h  beat.h  encoding.cpp  encoding.h  fraction.cpp  fraction.h  hash.h  keymap.cpp  keymap.h  log.cpp  log.h  logger.cpp  logger.h  meta.h  numtrans.h  pch.h  sysutil.cpp  sysutil.h  sysutil_linux.cpp  sysutil_win.cpp  types.h  utils.cpp  utils.h
src/common/chart/: bms.cpp  bms.h  chart.cpp  chart.h
src/common/chartformat/: chart_types.h  chartformat.cpp  chartformat.h  chartformat_bms.cpp  chartformat_bms.h  chartformat_types.h  format_bms.cpp  format_bms.h
src/common/coursefile/: lr2crs.cpp  lr2crs.h
src/common/defs/: defs_bms.h  defs_config.h  defs_file.h  defs_general.h  defs_input.h  defs_judge.h
src/common/difficultytable/: difficultytable.cpp  difficultytable.h  table_bms.cpp  table_bms.h
src/common/entry/: entry.h  entry_arena.h  entry_course.cpp  entry_course.h  entry_folder.cpp  entry_folder.h  entry_song.cpp  entry_song.h  entry_table.h  entry_types.h
src/config/: CMakeLists.txt  cfg_audio.cpp  cfg_audio.h  cfg_general.cpp  cfg_general.h  cfg_input.cpp  cfg_input.h  cfg_play.cpp  cfg_play.h  cfg_profile.cpp  cfg_profile.h  cfg_skin.cpp  cfg_skin.h  cfg_sys.cpp  cfg_video.h  config.cpp  config.h  config_mgr.cpp  config_mgr.h
src/config/abandoned/: cfg_input.h
src/db/: CMakeLists.txt  db_conn.cpp  db_conn.h  db_score.cpp  db_score.h  db_song.cpp  db_song.h
src/game/: CMakeLists.txt  LunaticVibes.exe.manifest  game.cpp  generic_info.h  git_version.cmake  main.cpp  test.cpp
src/game/arena/: arena_client.cpp  arena_client.h  arena_data.cpp  arena_data.h  arena_host.cpp  arena_host.h  arena_internal.cpp  arena_internal.h
src/game/chart/: chart.cpp  chart.h  chart_bms.cpp  chart_bms.h
src/game/data/: bargraph.h  buffered_global.cpp  buffered_global.h  data.h  data_arena.cpp  data_arena.h  data_internal.cpp  data_internal.h  data_keyconfig.h  data_lr2customize.h  data_play.cpp  data_play.h  data_profile.h  data_result.h  data_select.cpp  data_select.h  data_shared.cpp  data_shared.h  data_system.cpp  data_system.h  data_types.h  number.h  option.h  slider.h  switch.h  text.h  timer.h  tmp.cpp
src/game/graphics/: dxa.cpp  dxa.h  graphics.cpp  graphics.h  sprite.cpp  sprite.h  sprite_bar_entry.cpp  sprite_bar_entry.h  sprite_graph.cpp  sprite_graph.h  sprite_imagetext.cpp  sprite_imagetext.h  sprite_lane.cpp  sprite_lane.h  sprite_video.cpp  sprite_video.h  texture_extra.cpp  texture_extra.h  video.cpp  video.h
src/game/input/: input_dinput8.cpp  input_dinput8.h  input_keys.h  input_mgr.cpp  input_mgr.h  input_mgr_sdl.cpp  input_rawinput.cpp  input_rawinput.h  input_windows.cpp  input_wrapper.cpp  input_wrapper.h
src/game/replay/: replay_chart.cpp  replay_chart.h
src/game/ruleset/: ruleset.h  ruleset_bms.cpp  ruleset_bms.h  ruleset_bms_auto.cpp  ruleset_bms_auto.h  ruleset_bms_network.cpp  ruleset_bms_network.h  ruleset_bms_replay.cpp  ruleset_bms_replay.h  ruleset_classic.cpp  ruleset_classic.h  ruleset_network.cpp  ruleset_network.h
src/game/runtime/: generic_info.h  i18n.cpp  i18n.h  state.cpp  state.h
src/game/scene/: musicSelect.cpp  musicSelect.h  scene.cpp  scene.h  scene_context.cpp  scene_context.h  scene_course_result.cpp  scene_course_result.h  scene_customize.cpp  scene_customize.h  scene_decide.cpp  scene_decide.h  scene_exit_trans.cpp  scene_exit_trans.h  scene_keyconfig.cpp  scene_keyconfig.h  scene_mgr.cpp  scene_mgr.h  scene_play.cpp  scene_play.h  scene_play_course_trans.cpp  scene_play_course_trans.h  scene_play_imgui.cpp  scene_play_retry_trans.cpp  scene_play_retry_trans.h  scene_pre_select.cpp  scene_pre_select.h  scene_result.cpp  scene_result.h  scene_select.cpp  scene_select.h  scene_select_imgui.cpp
src/game/scroll/: scroll.cpp  scroll.h  scroll_bms.cpp  scroll_bms.h
src/game/skin/: skin.cpp  skin.h  skin_.cpp  skin_lr2.cpp  skin_lr2.h  skin_lr2_button_callbacks.cpp  skin_lr2_button_callbacks.h  skin_lr2_converters.cpp  skin_lr2_converters.h  skin_lr2_converters_bargraph.cpp  skin_lr2_converters_button.cpp  (+13 more)
src/setup/: CMakeLists.txt  setup.cpp  setupdialog.cpp  setupdialog.h  setupdialog.ui
test/: CMakeLists.txt  packages.config  test.vcxproj  test_config.cpp  test_db.cpp  test_main.cpp
test/common/: test_chartformat_bms.cpp  test_fraction.cpp
test/game/: test_graphics.cpp  test_lr2skin.cpp
(+982 files in other folders)
